--- a/tutorials/MF_tutorial_with_answers.ipynb
+++ b/tutorials/MF_tutorial_with_answers.ipynb
@@ -10,7 +10,7 @@
     "# Movie recommendation using Matrix Factorization\n",
     "## IVADO - Online course on Recommender Systems \n",
     "\n",
-    "Tutorial adapted from content originally created for [IVADO's Workshop on Recommender Systems](https://ivado.ca/en/trainings/workshops/workshop-recommender-systems/), August 2019."
+    "Tutorial adapted from content originally created for IVADO's Workshop on Recommender Systems, August 2019."
    ]
   },
   {
