--- a/tutorials/MF_tutorial_with_exercises.ipynb
+++ b/tutorials/MF_tutorial_with_exercises.ipynb
@@ -1419,8 +1419,7 @@
    "source": [
     "##### Question 9\n",
     "\n",
-    "1. Can some latent variables be interpretable?\n",
-    "2. What would happen if we increase the number of latent variables? If we decrease it?"
+    "1. Can some latent variables be interpretable?"
    ]
   },
   {
